--- a/main.css
+++ b/main.css
@@ -57,12 +57,54 @@ footer {
 
 .square{
     background: white;
+    height: 100%;
     border-radius: 5px;
 }
 
+/* !X mark*/
+.x{
+    display: block;
+    height: 100%;
+    width: 100%;
+}
+.x::before{
+    content: "";
+    background: black;
+    display: block;
+    position: relative;
+    width: 10%;
+    height: 100%;
+    z-index: 0;
+    margin: auto;
+    transform: rotate(-45deg);
+}
+.x:after{
+    content: "";
+    background: black;
+    display: block;
+    position: relative;
+    width: 10%;
+    height: 100%;
+    bottom: 100%;
+    z-index: 0;
+    margin: auto;
+    transform: rotate(45deg);
+}
 
-
+/* !O Mark*/
+.o{
+    border-style: solid;
+    border-width: 6px;
+    border-color: black;
+    border-radius: 50%;
+    position: relative;
+    top: 2%;
+    margin: auto;
+    height: 75%;
+    width: 75%;
+}
 /* BOARD CSS */
+
 
 /* FOOTER CSS */
 .foot {
