--- a/main.css
+++ b/main.css
@@ -105,6 +105,14 @@ footer {
 }
 /* BOARD CSS */
 
+/* OPTIONS */
+.options{
+    padding: 10px 0px;
+}
+
+.options__holder{
+}
+/* OPTIONS */
 
 /* FOOTER CSS */
 .foot {
@@ -118,3 +126,78 @@ footer {
 }
 
 /* FOOTER CSS */
+
+/* MODAL POPUP */
+.bg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+
+.bg-modal {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.modal__content {
+    position: relative;
+    width: 400px;
+    height: 400px;
+    background-color: white;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#userInput {
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+    width: 50%;
+    justify-content: space-evenly;
+}
+
+.optionBtn{
+    height: auto;
+    width: auto;
+    background: white;
+    color: #357edd;
+    padding: 0.5em;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: #357edd;
+    border-width: 2px;
+    box-shadow: 2px 2px 5px rgb(151, 151, 151);
+}
+.optionBtn:hover{
+    cursor: pointer;
+    background: #357edd;
+    color: white;
+}
+.optionBtn:focus{
+    outline:0;
+}
+.close {
+    position: absolute;
+    top: 0;
+    right: 14px;
+    font-size: 30px;
+    font-weight: bolder;
+    transform: rotate(45deg);
+    cursor: pointer;
+}
+/* MODAL POPUP */
